# api/swagger/swagger.yaml
@@ -6,8 +6,8 @@ info:
 host: "3.18.139.243:5001"
 basePath: "/emojiApp/v2/api"
 consumes:
-- "application/json"
 - "application/x-www-form-urlencoded"
+- "application/json"
 produces:
 - "application/json"
 schemes:
@@ -23,26 +23,24 @@ paths:
         tags:
         - "user"
         summary: Authenticating user(Login Request)
-        parameters: 
-          - in: body
-            name: user
-            description: For simple login request.
-            required: true
-            schema:
-              type: object
-           
-               
-              properties:
-                emailId:
-                    type: string
-                
-                contactNumber:
-                    type: string
-                  
-                isdCode:
-                    type: string
-              
-                 
+        description: Either emailid or number need to be provided.
+        consumes:
+        - "multipart/form-data"
+        produces:
+        - "application/json"
+        parameters:
+        - name: "emailId"
+          in: "formData"
+          description: "Email id of user"
+          type: "string"
+        - name: "contactNumber"
+          in: "formData"
+          description: "phone number of user"
+          type: string
+        - name: "isdCode"
+          in: "formData"
+          description: "isd code  of user country"
+          type: string
         responses:
           "200":
             description: "Login Successfull"
@@ -61,46 +59,56 @@ paths:
         tags:
         - "user"
         summary: New users registration request
-        parameters: 
-          - in: body
-            name: user
-            description: For simple registration request.
-            required: true
-            schema:
-              type: object
-              required:
-                - userName
-                - fullName
-                - emailId
-                - contactNumber
-                - isdCode
-                - deviceType
-                - deviceId
-                - fcmToken
-             
-               
-              properties:
-                userName:
-                    type: string
-                fullName:
-                    type: string
-                contactNumber:
-                    type: string
-                emailId:
-                    type: string
-                isdCode:
-                    type: string
-                gender:
-                    type: string
-                deviceType:
-                    type: string 
-                    enum:
-                    - "IOS"
-                    - "ANDROID"
-                deviceId:
-                    type: string
-                fcmToken:
-                    type: string
+        consumes:
+        - "multipart/form-data"
+        produces:
+        - "application/json"
+        
+        parameters:
+        - name: "userName"
+          in: "formData"
+          description: "User name of the user.It needs to be unique for every user"
+          type: "string"
+          required: true
+          
+        - name: "fullName"
+          in: "formData"
+          description: "User full name."
+          type: "string"
+          required: true  
+        - name: "emailId"
+          in: "formData"
+          description: "Email id of user."
+          type: "string"
+          required: true  
+        - name: "contactNumber"
+          in: "formData"
+          description: "phone number of user."
+          type: "string"
+          required: true
+        - name: "isdCode"
+          in: "formData"
+          description: "isd code  of user country."
+          type: "string"
+          required: true  
+        - name: "deviceType"
+          in: "formData"
+          description: "The type of device user is using."
+          type: "string"
+          enum:
+          - "IOS"
+          - "ANDROID"
+          required: true  
+        - name: "deviceId"
+          in: "formData"
+          description: "User device id."
+          type: "string"
+          required: true  
+        - name: "fcmToken"
+          in: "formData"
+          description: "Fcm token."
+          type: "string"
+          required: true  
                
         responses:
           "200":
@@ -117,18 +125,16 @@ paths:
         tags:
         - "user"
         summary: Api should check if the email exist in database and respond accordingly.
-        parameters: 
-          - in: body
-            name: user
-            description: Check emialId exits or not api.
-            required: true
-            schema:
-              type: object
-              required:
-                - emailId
-              properties:
-                emailId:
-                    type: string   
+        consumes:
+        - "multipart/form-data"
+        produces:
+        - "application/json"
+        parameters:
+        - name: "emailId"
+          in: "formData"
+          description: "Email id of user to check if it already been used or not."
+          type: "string"
+          required: true  
         responses:
           "200":
             description: "Emailid Exist"
@@ -144,22 +150,21 @@ paths:
         tags:
         - "user"
         summary: Api should check if the contactNumber exist in database and respond accordingly.
-        parameters: 
-          - in: body
-            name: user
-            description: Check contactNumber exits or not api.
-            required: true
-            schema:
-              type: object
-              required:
-                - contactNumber
-                - isdCode
-                
-              properties:
-                contactNumber:
-                    type: string   
-                isdCode:
-                    type: string
+        consumes:
+        - "multipart/form-data"
+        produces:
+        - "application/json"
+        parameters:
+        - name: "contactNumber"
+          in: "formData"
+          description: "phone number of user."
+          type: "string"
+          required: true
+        - name: "isdCode"
+          in: "formData"
+          description: "isd code  of user country."
+          type: "string"
+          required: true 
         responses:
           "200":
             description: "contactNumber Exist"
