# lib/user/userValidator.js
@@ -1,7 +1,43 @@
 const userConst = require('./userConstants');
 const jwtHndlr = require('../jwtHandlers');
+var FormData = require('form-data');
+var fs = require('fs');
+//<---------------------------------------------------------------Updated Api`s validator start from here------------------------------------------------------------------------------------------------------------------------------>
 
-//====================================================================================================================================================
+function validateSignUp(req, res, next) {
+
+	let { userName, fullName, emailId, contactNumber, isdCode, deviceType, deviceId, fcmToken, } = req.body;
+
+	if (userName && fullName && emailId && contactNumber && isdCode && deviceType && deviceId && fcmToken) {
+		console.log("into registration page ")
+		next();
+	} else {
+		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
+	}
+}
+
+
+function ValidateLogin(req, res, next) {
+	console.log("into validatior", req.body.emailId)
+	if (req.body.emailId || ((req.body.contactNumber && req.body.isdCode))) {
+		console.log("into validatior fileeeeeeeeee")
+		next();
+	}
+	else {
+		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
+	}
+}
+
+
+function ValidateNumberExist(req, res, next) {
+
+	if (req.body.contactNumber && req.body.isdCode) {
+		next();
+	}
+	else {
+		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
+	}
+}
 
 
 function verifyToken(req, res, next) {
@@ -21,27 +57,11 @@ function verifyToken(req, res, next) {
 		}).catch(err => { return res.json({ code: userConst.CODES.INTRNLSRVRERR, message: userConst.MESSAGES.inValidToken }) })
 	}
 }
-function validateSignUp(req, res, next) {
 
-	let { userName, fullName, emailId, contactNumber, isdCode, deviceType, deviceId, fcmToken, } = req.body;
 
-	if (userName && fullName && emailId && contactNumber && isdCode && deviceType && deviceId && fcmToken) {
-		console.log("into registration page ")
-		next();
-	} else {
-		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
-	}
-}
-// function validateSignUp(req, res, next) {
+//<---------------------------------------------------------------Updated Api`s validator Ended------------------------------------------------------------------------------------------------------------------------------>
 
-// 	let { userName, fullName, contactNumber, emailId, password, deviceType, deviceToken } = req.body;
 
-// 	if (userName && fullName && contactNumber && emailId && password && deviceType && deviceToken) {
-// 		next();
-// 	} else {
-// 		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
-// 	}
-// }
 function validateverifyAccount(req, res, next) {
 	if (req.body.pin) {
 		next();
@@ -50,15 +70,7 @@ function validateverifyAccount(req, res, next) {
 		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
 	}
 }
-function ValidateLogin(req, res, next) {
-	console.log("into validate login")
-	if (req.body.emailId || ((req.body.contactNumber && req.body.isdCode))) {
-		next();
-	}
-	else {
-		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
-	}
-}
+
 function validateForgotPassword(req, res, next) {
 
 	if (req.body.emailId) {
@@ -77,15 +89,7 @@ function validatechangePassword(req, res, next) {
 		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
 	}
 }
-function ValidateNumberExist(req, res, next) {
 
-	if (req.body.contactNumber && req.body.isdCode) {
-		next();
-	}
-	else {
-		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
-	}
-}
 
 module.exports = {
 	verifyToken,
